<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hhh"
        android:textColor="#716D6D"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        app:cardBackgroundColor="#E3E3E3"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="104dp"
        android:text="@string/happy_deals"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="132dp"
        android:text="@string/big"
        android:textColor="#716D6D"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="244dp"
        android:text="@string/exclusively_on_fastfood"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="220dp"
        android:text="@string/deal_icious_offers_from_top_brand"
        android:textColor="#716D6D"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639642220__3_" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="41dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639642220__1_" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="42dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/photo1639642220__2_" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="408dp"
        android:layout_height="136dp"
        android:layout_marginTop="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo1639642220__4_" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="145dp"
        android:layout_height="118dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639642221" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="145dp"
        android:layout_height="119dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="304dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/photo1639642221__1_" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/photo1639642221__2_" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:srcCompat="@drawable/photo1639642221__3_" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="26dp"
        android:text="@string/offers"
        android:textColor="#FF5722"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:srcCompat="@drawable/photo1639642221__4_" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="24dp"
        android:layout_height="27dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/photo1639642221__5_" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#D10303"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#FF5000"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#FF8C00"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2" />

    <Button
        android:layout_width="410dp"
        android:layout_height="1dp"
        android:backgroundTint="#959494"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="441dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="410dp"
        android:layout_height="1dp"
        android:layout_marginBottom="31dp"
        android:backgroundTint="#959494"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:backgroundTint="#E3E3E3"
        android:text="Search Food nearby..."
        android:textColor="@color/black"
        android:textSize="11dp"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="56dp" />


</androidx.constraintlayout.widget.ConstraintLayout>